--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" 
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css"/>
+    <title>THREEJS</title>
   </head>
   <body>
   </body>
